--- a/about.html
+++ b/about.html
@@ -3,9 +3,10 @@
 <head>
     <title>The Black Keys | About</title>
     <meta name="description" content="This is a site for the black keys">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
+    <header class="main-header">
         <nav>
             <ul>
                 <li><a href=index.html>HOME</a></li>
